@@ -2,6 +2,8 @@ Changes to Version 2.0-21
 
     o Added has.intercept.multinom() to make Anova() work with multinom objects fit to a dichotomous response (after bug report by Kristian Hovde Liland).
 
+    o Replaced vif.lm() with vif.default() to cover wider variety of models (after question by Laura Rigg about gls models).
+
 Changes to Version 2.0-20
 
     o Added new id.method="r" to showLabels for labeling plots of residuals; default id.method changed in residualPlots.
